--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.KpopComebacks"
         tools:targetApi="31">
         <activity
-            android:name=".SplashActivity"
+            android:name=".splash.presentation.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.KpopComebacks">
