--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".main.presentation.MainActivity" />
+        <activity android:name=".main.common.presentation.MainActivity" />
 
     </application>
 </manifest>
