--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KpopComebacks">
+        android:theme="@style/Theme.KpopCalendar">
 
         <activity
             android:name=".splash.presentation.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.KpopComebacks">
+            android:theme="@style/Theme.KpopCalendar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
