--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.KpopCalendar">
 
         <activity
-            android:name=".splash.presentation.SplashActivity"
+            android:name=".KpopCalendarActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.KpopCalendar">
@@ -25,8 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".main.common.presentation.MainActivity" />
 
     </application>
 </manifest>
